--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
         <!-- PDF Display Area -->
         <div class="pdf-container">
             <!-- Loading State -->
-            <div class="loading" id="loading" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; color: #666; background: white; z-index: 10;">
+            <div class="loading" id="loading">
                 <div class="spinner"></div>
                 <span>Loading resume...</span>
             </div>
             
             <!-- PDF Canvas Container -->
-            <div class="pdf-canvas-container" id="pdfContainer" style="display: none;">
+            <div class="pdf-canvas-container" id="pdfContainer">
                 <!-- PDF pages will be rendered here -->
             </div>
             
             <!-- Fallback Display -->
-            <div class="pdf-fallback" id="pdfFallback" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: none;">
-                <div style="text-align: center; padding: 40px; height: 100%; display: flex; flex-direction: column; justify-content: center;">
-                    <svg style="width: 48px; height: 48px; margin-bottom: 20px; color: #667eea;" fill="currentColor" viewBox="0 0 20 20">
+            <div class="pdf-fallback" id="pdfFallback">
+                <div class="fallback-content">
+                    <svg class="fallback-icon" fill="currentColor" viewBox="0 0 20 20">
                         <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z" clip-rule="evenodd"></path>
                     </svg>
-                    <h3 style="margin-bottom: 15px; color: #333; font-size: 1.4em;">Resume Preview</h3>
-                    <p style="margin-bottom: 25px; color: #666; line-height: 1.6;">
+                    <h3>Resume Preview</h3>
+                    <p>
                         PDF preview is not available in this browser.<br>
                         Use the buttons below to view or download the resume.
                     </p>
-                    <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
-                        <a href="VanshDeshwal_Resume.pdf" target="_blank" style="display: inline-block; padding: 12px 24px; background: #2c3e50; color: white; text-decoration: none; border-radius: 8px; font-weight: 600;">
+                    <div class="fallback-buttons">
+                        <a href="VanshDeshwal_Resume.pdf" target="_blank" class="fallback-btn primary">
                             View Resume
                         </a>
-                        <a href="VanshDeshwal_Resume.pdf" download="Vansh_Deshwal_Resume.pdf" style="display: inline-block; padding: 12px 24px; background: #667eea; color: white; text-decoration: none; border-radius: 8px; font-weight: 600;">
+                        <a href="VanshDeshwal_Resume.pdf" download="Vansh_Deshwal_Resume.pdf" class="fallback-btn secondary">
                             Download
                         </a>
                     </div>
