--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
         <div class="pdf-container">
             <!-- Loading State -->
             <div class="loading" id="loading">
-                <div class="spinner"></div>
-                <span>Loading resume...</span>
+                <div class="loading-animation">
+                    <div class="loading-dots">
+                        <div class="loading-dot"></div>
+                        <div class="loading-dot"></div>
+                        <div class="loading-dot"></div>
+                    </div>
+                    <div class="loading-text">Loading resume...</div>
+                </div>
             </div>
             
             <!-- PDF Canvas Container -->
